gitops/hello-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-node-app
  template:
    metadata:
      labels:
        app: hello-node-app
    spec:
      containers:
      - image: docker.io/cg2p/hello-node:1.0
        name: hello-node-app
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 3000
