gitops/hello-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node-app
spec:
  ports:
  - name: 3000-tcp
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: hello-node-app
