gitops/hello-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-dev-route
spec:
  to:
    kind: Service
    name: hello-node-app
  port:
    targetPort: 3000-tcp
